# src/models/domain/email.rs
@@ -58,9 +58,9 @@ pub struct Email {
 #[derive(Debug, Clone, Serialize, Deserialize)]
 pub struct EmailFilter {
     /// 开始时间
-    pub start_time: Option<String>,
+    pub start_time: DateTime<Utc>,
     /// 结束时间
-    pub end_time: Option<String>,
+    pub end_time: DateTime<Utc>,
     /// 情报ID
     pub intelligence_id: String,
     /// 邮件状态
